// Vitest Snapshot v1

exports[`Button > renders {0}, 0 and {false} 1`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
>
  0
</button>
`;

exports[`Button > renders {0}, 0 and {false} 2`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
>
  0
</button>
`;

exports[`Button > renders {0}, 0 and {false} 3`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
/>
`;

exports[`Button > renders correctly 1`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
>
  Follow
</button>
`;

exports[`Button > should not render as link button when href is undefined 1`] = `
<button
  class="btn btn-middle btn-primary"
  type="button"
>
  button
</button>
`;

exports[`Button > should render empty button without errors 1`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
/>
`;

exports[`Button > should support link button 1`] = `
<a
  class="btn btn-default btn-middle"
  href="https://ant.design"
  target="_blank"
>
  link button
</a>
`;
